# scifont

./: LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  setup.py
scifont/: __init__.py  core.py
scifont.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
