[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scifont"
version = "0.1.0"
description = "Force publication-quality, editable fonts in Matplotlib figures."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "scifont contributors"}
]
keywords = ["matplotlib", "fonts", "scientific", "publication", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/scifont/scifont"
Repository = "https://github.com/scifont/scifont"
Issues = "https://github.com/scifont/scifont/issues"

[tool.setuptools]
packages = ["scifont"]

[tool.setuptools.package-data]
scifont = ["fonts/*.ttf"]

